tests/ui/const-generics/defaults/param-order-err-pretty-prints-default.stderr
error: lifetime parameters must be declared prior to type and const parameters
  --> $DIR/param-order-err-pretty-prints-default.rs:1:33
   |
LL | struct Foo<const M: usize = 10, 'a>(&'a u32);
   |                                 ^^
   |
help: reorder the parameters: lifetimes, then consts and types
   |
LL | struct Foo<'a, const M: usize = 10>(&'a u32);
   |           ~~~~~~~~~~~~~~~~~~~~~~~~~

error: aborting due to 1 previous error

